--- a/views/change_password_form.erb
+++ b/views/change_password_form.erb
@@ -1,4 +1,4 @@
-<form role="form" method="post" action="/change_password">
+<form role="form" method="post" action="change_password">
   <div class="form-group">
     <label for="username">Username</label>
     <input type="text" class="form-control" name="username" id="username"
